--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <section class="root-section">
         <aside class="aside-left-menu">
             <div class="logo">
-                <a href="#" class="logo-link">
-                    <img src="images/logo.svg" alt="">
+                <a href="#" >
+                    <img src="images/logo.svg" alt="" width="136px">
                 </a>
             </div>
             <div class="catalog-tree">
@@ -19,30 +19,42 @@
                     <div class="catalog-tree-section-card-icon"></div>
                     <span class="catalog-tree-section-card-title"> На разные случаи</span>
                 </div>
-                <div class="catalog-tree-section-card">
-                    <div class="catalog-tree-section-card-icon"></div>
-                    <span class="catalog-tree-section-card-title"> От Самоката</span>
-                </div>
-                <div class="catalog-tree-section-card">
-                    <div class="catalog-tree-section-card-icon"></div>
-                    <span class="catalog-tree-section-card-title"> Молоко, яйца и сыр</span>
-                </div>
-                <div class="catalog-tree-section-card">
-                    <div class="catalog-tree-section-card-icon"></div>
-                    <span class="catalog-tree-section-card-title"> Овощи и фрукты</span>
-                </div>
-                <div class="catalog-tree-section-card">
-                    <div class="catalog-tree-section-card-icon"></div>
-                    <span class="catalog-tree-section-card-title"> Мясо и рыба</span>
-                </div>
             </div>
+        </div>
         </aside>
         <main class="main-content">
             <div class="search-header">
                 <input type="text" class="search-input" placeholder="Искать в Самокате">
             </div>
             <div class="search-content">
-
+                <div class="promo-categories">
+                    <div class="swiper">
+                        <div class="promo-categories-card">
+                            <span class="card-title">
+                                Сладкое к завтраку
+                            </span>
+                            <img src="images/breakfast.jpg" alt="" class="card-image">
+                        </div>
+                        <div class="promo-categories-card">
+                            <span class="card-title">
+                                Что добавить в каши
+                            </span>
+                            <img src="images/porridge.jpg" alt="" class="card-image">
+                        </div>
+                        <div class="promo-categories-card">
+                            <span class="card-title">
+                                Молочные продукты
+                            </span>
+                            <img src="images/dairy_desserts.jpeg" alt="" class="card-image">
+                        </div>
+                        <div class="promo-categories-card">
+                            <span class="card-title">
+                                Взять на прогулку
+                            </span>
+                            <img src="images/outgoing-meal.jpg" alt="" class="card-image">
+                        </div>
+                    </div>
+                </div>
             </div>
             <footer class="footer">
 
